# Pythone_07

./: tournament.py
Python_00/ex1/: ft_garden_name.py
Python_00/ex3/: ft_harvest_total.py
Python_00/ex6/: ft_count_harvest_recursive.py
Python_00/ex7/: ft_seed_inventory.py
Python_01/ex0/: ft_garden_intro.py
Python_01/ex1/: ft_garden_data.py
Python_01/ex2/: ft_plant_growth.py
Python_01/ex3/: ft_plant_factory.py
Python_01/ex4/: ft_garden_security.py
Python_01/ex5/: ft_plant_types.py
Python_01/ex6/: ft_garden_analytics.py
Python_02/ex0/: ft_first_exception.py
Python_02/ex1/: ft_raise_exception.py
Python_02/ex2/: ft_different_errors.py
Python_02/ex3/: ft_custom_errors.py
Python_02/ex4/: ft_finally_block.py
Python_03/ex0/: ft_command_quest.py
Python_03/ex1/: ft_score_analytics.py
Python_03/ex2/: ft_coordinate_system.py
Python_03/ex3/: ft_achievement_tracker.py
Python_03/ex4/: ft_inventory_system.py
Python_03/ex5/: ft_data_stream.py
Python_03/ex6/: ft_data_alchemist.py
Python_04/ex0/: ft_ancient_text.py
Python_04/ex1/: ft_archive_creation.py
Python_04/ex2/: ft_stream_management.py
Python_04/ex3/: ft_vault_security.py
Python_05/ex0/: data_processor.py
Python_06/: ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_distillation_0.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Python_07/: battle.py  capacitor.py
ex0/: __init__.py  construct.py
ex1/: pyproject.toml  requirements.txt
ex2/: .gitignore  oracle.py
matrix_env/: pyvenv.cfg
(+26 files in other folders)
