[tool.poetry]
name = "matrix"
version = "0.1.0"
description = "Matrix data loading and analysis"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^3.0.3"
numpy = "^2.4.6"
matplotlib = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"